--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -183,3 +183,39 @@ body {
 .closeButton {
     background-color: #626262;
 }
+
+.work__container{
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+    display: flex;
+    flex-flow: row wrap;
+  }
+.work__img{
+  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+  border-radius: .5rem;
+  overflow: hidden;
+  
+
+  
+  
+}
+.work__img img{
+  transition: 1s;
+  cursor: pointer;
+ 
+}
+.work__img img:hover{
+  transform: scale(1.1);
+}
+
+.wrapper {
+    transform: scale(0.750);
+    max-width: 600px;
+    margin: auto;
+}
+
+p {
+    font-size: 30px;
+}
