--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -147,7 +147,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     text-align: center;
-    max-width: 600px;
+    max-width: 1000px;
 }
 
 #fufi-modal {
@@ -166,6 +166,7 @@ body {
     margin: auto auto;
     flex-wrap: wrap;
     flex-direction: column;
+    
     text-align: center;
 }
 
@@ -248,8 +249,14 @@ body {
   transform: scale(1.1);
 }
 
+
+
 .wrapper {
     transform: scale(0.750);
+    max-width: 600px;
+    margin: auto;
+}
+.skills_wrapper {
     max-width: 600px;
     margin: auto;
 }
@@ -271,19 +278,6 @@ p {
     margin-bottom: 0;
 }
 
-#arrows {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#firstrow {
-    justify-content: center;
-}
-
-#secondrow {
-    justify-content: center;
-}
 
 #perfil {
     border-radius: 30px;
@@ -325,9 +319,28 @@ textarea {
 }
 
 #para-hobbies {
-    margin-top: 150px;
+    
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #list {
     list-style: none;
+    margin: 0 auto;
+    margin-bottom: 75px;
 }
+
+h1, h2, h3, h4, h5, h6, strong {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 500;
+   /* font-family: 'Roboto Mono', monospace;*/
+}
+
+p, li, span, label, input, textarea {
+    
+    font-family: 'Russo One', sans-serif;
+    font-weight: 500;
+    /*font-family: 'Roboto Mono', monospace;*/
+}
+
